--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     List<Pizza> ListPizza = new List<Pizza>();
 
+    Layout = null;
+
     ListPizza.Add(new Pizza("Pizza Margherita", "bona come er pane", "cane.png", 3.99));
     ListPizza.Add(new Pizza("Pizza Capricciosa", "idem co patate", "cane.png", 7.99));
     ListPizza.Add(new Pizza("Pizza Diavola", "er duca", "cane.png", 12.99));
@@ -9,35 +11,52 @@
     ListPizza.Add(new Pizza("Pizza Salsiccia e Salame", "tonino u lurdu", "cane.png", 5.99));
 }
 
-<div>
-    <h1 class="text-center display-4">Welcome</h1>
-    <table class="table table-dark table-striped table-hover">
-        <thead>
-            <tr>
-                <th scope="col" width="25%">Nome</th>
-                <th scope="col" width="25%">Descrizione</th>
-                <th scope="col" width="25%">Immagine</th>
-                <th scope="col" width="25%">Prezzo</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var pizza in ListPizza)
-            {
-                <tr>
-                    <td>
-                        <h3>@pizza.Name</h3>
-                    </td>
-                    <td>
-                        <p>@pizza.Description</p>
-                    </td>
-                    <td>
-                        <img width="100" src="~/img/@pizza.Image">
-                    </td>
-                    <td>
-                        <h4>@pizza.Price€</h4>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>@ViewData["Title"] Totò Sapore</title>
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/la_mia_pizzeria_static.styles.css" asp-append-version="true" />
+    </head>
+
+    <body>
+        <div class="container">
+            <h1 class="text-center display-4">Welcome to Pizzeria Totò Sapore</h1>
+            <table class="table table-dark table-striped table-hover mt-4">
+                <thead>
+                    <tr>
+                        <th scope="col" width="25%">Nome</th>
+                        <th scope="col" width="25%">Descrizione</th>
+                        <th scope="col" width="25%">Immagine</th>
+                        <th scope="col" width="25%">Prezzo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var pizza in ListPizza)
+                    {
+                        <tr>
+                            <td>
+                                <h3>@pizza.Name</h3>
+                            </td>
+                            <td>
+                                <p>@pizza.Description</p>
+                            </td>
+                            <td>
+                                <img width="100" src="~/img/@pizza.Image">
+                            </td>
+                            <td>
+                                <h4>@pizza.Price€</h4>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+    </body>
+</html>
