--- a/Views/Exercise/Index.cshtml
+++ b/Views/Exercise/Index.cshtml
@@ -19,8 +19,11 @@
     int danteCount = Dante.Count(f => (f == target));
 
     //esercizio-4
-
-
+    List<int> RandomList = new List<int>();
+    for(int i = 0; i <= 20; i++) {
+        int rnd = new Random().Next(1, 90);
+        RandomList.Add(rnd);
+    }
 }
 
 <div>
@@ -35,6 +38,15 @@
     <h3>@danteCount</h3>
     <hr />
     <p>Esercizio 4</p>
+    <h3>
+        @foreach(int num in RandomList) {
+            if(num > 20 && num < 70) {
+                <span class="me-3">@num</span>
+            }
+        }
+    </h3>
+    <hr />
+    <p>Esercizio 5</p>
     <h3></h3>
     <hr />
 </div>
